<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/theWholeRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/outline"
    android:layout_marginBottom="10dp">
    <RelativeLayout
        android:id="@+id/checkItemRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/checkItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_navigate_next_24"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/checkOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:visibility="gone">
        <RadioGroup
            android:id="@+id/normalOrDefective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal" />
            <RadioButton
                android:id="@+id/defective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defective"/>
        </RadioGroup>
    </LinearLayout>
    <EditText
        android:id="@+id/followUpAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/follow_up_action"
        android:visibility="gone"/>
</LinearLayout>
