<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <TextView
        android:id="@+id/formDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_below="@+id/formDate"
        android:id="@+id/roomNameAndLocationLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name_location" />

        <TextView
            android:id="@+id/roomNameAndLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name_location"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inspectorLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roomNameAndLocationLL"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspector" />

        <TextView
            android:id="@+id/inspector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspector"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/historyRoomImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/inspectorLL"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop" />
    <LinearLayout
        android:layout_below="@+id/historyRoomImg"
        android:id="@+id/headerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/form_outline"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/questionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:paddingBottom="5dp"
            android:text="@string/equipment_items"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@drawable/form_outline"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/normal" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/defective" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black" />
            <TextView

                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/follow_up_action" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_below="@+id/headerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/formRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/form_outline" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/signature" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outline">
            <ImageView
                android:id="@+id/historySignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_attach_email_24"
        android:contentDescription="@string/attach_to_email"
        android:layout_margin="16dp"
        />
</RelativeLayout>