<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/part2_picture_preview"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/part2_take_picture_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="#2C85EE"
            android:orientation="vertical">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_baseline_camera_alt_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/take_picture"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/signature" />
<LinearLayout
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:background="@drawable/outline"
    android:layout_height="wrap_content">
    <com.example.intelligentequipmentinspectionsystem.SignatureView
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/sign_here" />
</LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/clearSignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />
        </LinearLayout>


        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius30"
            android:text="@string/send"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>